# ansible-pc

./: .editorconfig  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
.config/: ansible-lint.yml  yamllint.yml
playbooks/: network.yml  power.yml
