[tool.poetry]
name = "ansible-pc"
version = "0.1.0"
description = ""
authors = ["Eduardo Dobay <edudobay@gmail.com>"]
readme = "README.md"
packages = [{include = "ansible_pc"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.0.0"
yamllint = "^1.32.0"
ansible-lint = {markers = "platform_system != \"Windows\"", version = "^6.17.0"}
# IP address utilities: https://docs.ansible.com/ansible/latest/user_guide/playbooks_filters_ipaddr.html
netaddr = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
